# pretty-lattice

./: .gitignore  AGENTS.md  README.md  README_zh_CN.md  app.py  pyproject.toml  vercel.json
.github/workflows/: desktop.yml
docs/: constitution.md  desktop.md  development.md  front-end.md  index.md
docs/decisions/: cyclic-crystal-camera-orientation.md  index.md  use-pymatgen-backend.md
docs/notes/: ChatGPT-3D视角调控与操作.md  ChatGPT-动态分配颜色方案.md  ChatGPT-晶体结构可视化建议.md  camera_orientation_math.md  index.md  naumann_standard_view_algorithm.md  polyhedra_rendering_research.md  render_depth_sorting_review_2026-07-02.md  thermo_nuclear_code_quality_review_2026-06-30.md  threejs_preview_performance_handoff_2026-06-27.md
openspec/: config.yaml
packaging/: prl_server.spec
scripts/: build_release.py  build_sidecar.py  soften_colormap.py
site/: getting-started.html  index.html
src/pretty_lattice/: cli.py  desktop.py
tests/: test_api.py  test_cli.py  test_electronic.py  test_ipr.py  test_periodic_bonding.py  test_structures.py  test_vasprun.py
web/: package.json  tsconfig.json  vite.config.ts
web/public/: splash.html
web/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
web/src-tauri/capabilities/: default.json
web/src-tauri/src/: lib.rs
web/tests/: App.test.tsx  atomInspector.test.ts  atomPicking.test.ts  atomSelection.test.ts  bondCutoffs.test.ts  chartExport.test.ts  colorSchemes.test.ts  crystalCamera.test.ts  dosIpr.test.tsx  electronicDos.test.ts  electronicDosCard.test.tsx  electronicPanelIpr.test.tsx  elementLegend.test.ts  elementRadii.test.ts  (+15 more)
(+173 files in other folders)
