[package]
name = "pretty-lattice-desktop"
version = "0.2.0"
description = "Desktop shell for Pretty Lattice."
authors = ["Pretty Lattice contributors"]
license = "MIT"
repository = "https://github.com/songfeitong/pretty-lattice"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.11.3", features = [] }
tauri-plugin-shell = "2"
